# Crm

./: CMakeLists.txt  main.cpp
include/: addGuestDialog.hpp  guestObjectDelegate.hpp  guestObjectModelPrototype.hpp  guestObjectPrototype.hpp  guestObjectWidgetPrototype.hpp  logindialog.hpp  mainButtons.hpp  mainwidget.hpp  secondButtonLayer.hpp
resources/: resources.qrc
src/: addGuestDialog.cpp  guestObjectDelegate.cpp  guestObjectModelPrototype.cpp  guestObjectPrototype.cpp  guestObjectWidgetPrototype.cpp  logindialog.cpp  mainButtons.cpp  mainwidget.cpp  secondButtonLayer.cpp
